--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>KNight | HaiZuka</title>
+    <title>KNight-Chess | HaiZuka</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 </head>
